fix: modify interest posting job to support early withdrawal rules